--- a/index.html
+++ b/index.html
@@ -7,8 +7,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>He 4 She CSF</title>
+    <style>
+
+        .hero{
+            color: white;
+            font-size: 7vh;
+            display: flex;
+            align-content: center;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 24px;
+            box-sizing: border-box;
+            height: 80vh;
+            background: linear-gradient(45deg, #af110c, #eb1676, #00BCD4);
+            background-size: 400% 200%;
+
+            -webkit-animation: AnimatedBackground 21s ease infinite;
+            -moz-animation: AnimatedBackground 21s ease infinite;
+            -o-animation: AnimatedBackground 21s ease infinite;
+            animation: AnimatedBackground 21s ease infinite;
+        }
+
+        @-webkit-keyframes AnimatedBackground {
+            0%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+            50%{background-position:100% 14%; text-shadow: -20px 20px 40px rgb(0,0,0.3);}
+            100%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+        }
+        @-moz-keyframes AnimatedBackground {
+            0%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+            50%{background-position:100% 14%; text-shadow: -20px 20px 40px rgb(0,0,0.3);}
+            100%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+        }
+        @-o-keyframes AnimatedBackground {
+            0%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+            50%{background-position:100% 14%; text-shadow: -20px 20px 40px rgb(0,0,0.3);}
+            100%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+        }
+        @keyframes AnimatedBackground {
+            0%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+            50%{background-position:100% 14%; text-shadow: -20px 20px 40px rgb(0,0,0.3);}
+            100%{background-position:0% 87%; text-shadow: 20px -20px 40px rgb(0,0,0.3);}
+        }
+    </style>
 </head>
 <body>
+
+
+    <div class="hero">
+        <h1>
+            # He For She
+        </h1>
+    </div>
+
+
+
+
+
+
     Coming soon!
     <br>
     Website by <a href="https://ctrl-alt-tec.hackclub.com">Ctrl Alt Tec</a>
